# ThermalImager

./: .gitignore  CMakeLists.txt
include/: MLX90640_I2C_Driver.h  color_lut.h  driver_st7789.h  driver_st7789_basic.h  driver_st7789_font.h  driver_st7789_interface.h
src/: MLX90640_API.c  MLX90640_I2C_Driver.c  ThermalImager.c  driver_st7789.c  driver_st7789_basic.c  driver_st7789_interface_template.c
